fixed hover images on safari

--- a/src/common/styles/pages/who-we-are.css
+++ b/src/common/styles/pages/who-we-are.css
@@ -313,6 +313,7 @@
   left: 50%;
   transform: translateX(-50%);
   transition: opacity 300ms ease;
+  object-fit: contain;
 }
 
 .WhoWeAre-team-info {
